Disable Editing Channel Lists in Task Snapshot # Issue Pull Request
## Key Information

<!-- Edit the list below with the proper issue number and link -->

- **Linear Issue**: [SY-1690](https://linear.app/synnax/issue/SY-1690/disable-editing-channel-lists-in-task-snapshot)

## Description

<!-- Write a short (2-3 sentence) description describing the changes. -->

Made sure all task snapshots were disabled from editing

## Basic Readiness

- [x] I have performed a self-review of my code.
- [x] I have added relevant tests to cover the changes to CI.
- [x] I have added needed QA steps to the [release candidate](/synnaxlabs/synnax/blob/main/.github/PULL_REQUEST_TEMPLATE/rc.md) template that cover these changes.
- [x] I have updated in-code documentation to reflect the changes.
- [x] I have updated user-facing documentation to reflect the changes.

## Backwards Compatibility

### Data Structures

I have ensured that previous versions of stored data structures are properly migrated to new formats in the following projects:

- [x] Server
- [x] Console

### API Changes

The following projects have backwards-compatible APIs:

- [x] Python Client
- [x] Server
- [x] TypeScript Client

### Breaking Changes

<!-- If anything in this section is not true, list all breaking changes. -->

--- a/pluto/src/input/Input.css
+++ b/pluto/src/input/Input.css
@@ -196,12 +196,6 @@
         border-color: transparent !important;
     }
 
-    &:not(:hover) {
-        & > *:not(.pluto-input__internal) {
-            opacity: 0;
-        }
-    }
-
     & .pluto-input__internal {
         border: none !important;
         background: none !important;
